fix: change title in block

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="block__img"></div>
             <div class="block__text-content">
               <p class="block__green-text">In Label</p>
-              <p class="block__bold-text">Ini Adalah Judul Artikel</p>
+              <p class="block__bold-text">Ini Adalah Judul Dilwodbek</p>
               <p class="block__shadow-text">
                 <span class="shadow-text__bold-text">By</span> Ridho Satriawan
               </p>
